--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,6 +129,33 @@ footer{
 	border-color:#cccccc;
 }
 
+#nameinput{
+	width: 250px;
+
+}
+
+#emailinput{
+	width: 250px;
+}
+
+#messageinput{
+	width:400px;
+	height:200px;
+}
+
+input[type=submit]{
+	background-color: #4aaaa5;
+	color:#FFFFFF;
+	font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	height:50px;
+	width:100px;
+	font-size:1.5em;
+	border:2px;
+	border-color:#000000;
+	border-style: solid;
+
+}
+
 /*To use for logo icons under connect me*/
 .logo{
 	float:left;
