--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,3 +239,14 @@ h1{
 hr{
 	margin:0px 30px 0px 30px;
 }
+
+@media only screen and (max-width: 980px) {
+
+}
+
+@media only screen and (max-width: 768px) {
+
+}
+
+@media only screen and (max-width: 640px) {
+}
